implementação da funcionalidade de buscar filmes/series e outros ajustes nas rotas e layout

--- a/app/styles/tailwind_base.css
+++ b/app/styles/tailwind_base.css
@@ -13,3 +13,8 @@
 .card > img {
   @apply rounded-3xl object-cover h-full;
 }
+
+form input[type="search"]:focus {
+  box-shadow: none;
+  outline: none;
+}
