--- a/app/styles/tailwind_base.css
+++ b/app/styles/tailwind_base.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: "Fredoka", sans-serif;
+}
+
 .card {
   @apply flex-shrink-0 w-60 h-auto relative rounded-3xl shadow-slate-700 shadow-lg transition-all duration-200 delay-100 ease-in-out hover:scale-110 hover:shadow-cyan-500 focus-visible:outline-none focus:scale-110 focus:shadow-yellow-100;
 }
