--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -700,16 +700,6 @@ select {
   margin: 0px;
 }
 
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
@@ -735,28 +725,16 @@ select {
   margin-top: 2rem;
 }
 
-.mr-14 {
-  margin-right: 3.5rem;
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .mb-4 {
   margin-bottom: 1rem;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
 .mt-12 {
   margin-top: 3rem;
-}
-
-.ml-14 {
-  margin-left: 3.5rem;
-}
-
-.mb-6 {
-  margin-bottom: 1.5rem;
 }
 
 .flex {
@@ -771,24 +749,8 @@ select {
   height: 100vh;
 }
 
-.h-0 {
-  height: 0px;
-}
-
 .h-auto {
   height: auto;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-64 {
-  height: 16rem;
-}
-
-.h-32 {
-  height: 8rem;
 }
 
 .min-h-screen {
@@ -805,38 +767,6 @@ select {
 
 .w-64 {
   width: 16rem;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-5\/6 {
-  width: 83.333333%;
-}
-
-.w-11\/12 {
-  width: 91.666667%;
-}
-
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.w-3\/4 {
-  width: 75%;
-}
-
-.w-80 {
-  width: 20rem;
 }
 
 .w-auto {
@@ -889,36 +819,18 @@ select {
   gap: 2.5rem;
 }
 
-.gap-x-7 {
-  -moz-column-gap: 1.75rem;
-       column-gap: 1.75rem;
-}
-
-.gap-y-12 {
-  row-gap: 3rem;
-}
-
-.gap-y-6 {
-  row-gap: 1.5rem;
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
 }
 
 .gap-y-10 {
   row-gap: 2.5rem;
 }
 
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
-
 .gap-x-6 {
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
-}
-
-.gap-x-5 {
-  -moz-column-gap: 1.25rem;
-       column-gap: 1.25rem;
 }
 
 .overflow-hidden {
@@ -937,11 +849,6 @@ select {
   border-radius: 9999px;
 }
 
-.rounded-b-3xl {
-  border-bottom-right-radius: 1.5rem;
-  border-bottom-left-radius: 1.5rem;
-}
-
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -950,10 +857,6 @@ select {
 .rounded-r-md {
   border-top-right-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem;
-}
-
-.border-0 {
-  border-width: 0px;
 }
 
 .border {
@@ -1045,19 +948,14 @@ select {
   padding-bottom: 0.25rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .px-7 {
@@ -1102,14 +1000,6 @@ select {
   font-weight: 600;
 }
 
-.font-bold {
-  font-weight: 700;
-}
-
-.uppercase {
-  text-transform: uppercase;
-}
-
 .italic {
   font-style: italic;
 }
@@ -1147,10 +1037,6 @@ select {
 .text-slate-400 {
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity));
-}
-
-.opacity-0 {
-  opacity: 0;
 }
 
 .filter {
@@ -1202,7 +1088,7 @@ body {
   height: auto;
   width: 15rem;
   flex-shrink: 0;
-  border-radius: 1.5rem;
+  border-radius: 0.375rem;
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -1215,18 +1101,12 @@ body {
 }
 
 .card:hover {
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   --tw-shadow-color: #06b6d4;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
 .card:focus {
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  --tw-shadow-color: #fef9c3;
+  --tw-shadow-color: #06b6d4;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -1243,15 +1123,58 @@ body {
   width: 20rem;
 }
 
-.card > img {
+.card > .card-background {
   height: 100%;
   width: 100%;
-  border-radius: 1.5rem;
+  border-radius: 0.375rem;
 }
 
-form input[type="search"]:focus {
-  box-shadow: none;
-  outline: none;
+.card > .card-description {
+  position: absolute;
+  bottom: 0px;
+  display: flex;
+  height: 0px;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+  border-width: 0px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(6 182 212 / var(--tw-bg-opacity));
+  padding-left: 1rem;
+  padding-right: 1rem;
+  text-align: center;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  text-transform: uppercase;
+  --tw-text-opacity: 1;
+  color: rgb(226 232 240 / var(--tw-text-opacity));
+  opacity: 0;
+  transition-property: all;
+  transition-duration: 150ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card > .card-adult-content-alert {
+  position: absolute;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+  top: 5px;
+  left: 5px;
+  width: 40px;
+  height: 40px;
+  padding: 3px;
+}
+
+.card > .card-adult-content-alert > .image {
+  width: 100%;
+  height: 100%;
+  mask: url("/images/18-plus.svg");
+  -webkit-mask: url("/images/18-plus.svg");
+  background-color: rgb(223, 19, 19);
 }
 
 .btn {
@@ -1323,11 +1246,6 @@ form input[type="search"]:focus {
   border-color: rgb(6 182 212 / var(--tw-border-opacity));
 }
 
-.hover\:bg-slate-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-cyan-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(6 182 212 / var(--tw-bg-opacity));
@@ -1348,36 +1266,31 @@ form input[type="search"]:focus {
   border-color: rgb(148 163 184 / var(--tw-border-opacity));
 }
 
-.group:hover .group-hover\:h-7 {
-  height: 1.75rem;
+.focus\:shadow-none:focus {
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.group:hover .group-hover\:h-1\/3 {
-  height: 33.333333%;
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.group:hover .group-hover\:h-1\/4 {
+  height: 25%;
 }
 
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
 }
 
-.group:hover .group-hover\:delay-100 {
-  transition-delay: 100ms;
-}
-
-.group:focus .group-focus\:h-7 {
-  height: 1.75rem;
-}
-
-.group:focus .group-focus\:h-1\/3 {
-  height: 33.333333%;
+.group:focus .group-focus\:h-1\/4 {
+  height: 25%;
 }
 
 .group:focus .group-focus\:opacity-100 {
   opacity: 1;
-}
-
-.group:focus .group-focus\:delay-100 {
-  transition-delay: 100ms;
 }
 
 @media (min-width: 640px) {
@@ -1390,12 +1303,6 @@ form input[type="search"]:focus {
   }
 
   .sm\:flex-row {
-    flex-direction: row;
-  }
-}
-
-@media (min-width: 768px) {
-  .md\:flex-row {
     flex-direction: row;
   }
 }
