--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -688,8 +688,12 @@ select {
   bottom: 0px;
 }
 
-.right-0 {
-  right: 0px;
+.top-\[5px\] {
+  top: 5px;
+}
+
+.right-\[5px\] {
+  right: 5px;
 }
 
 .z-10 {
@@ -703,6 +707,11 @@ select {
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+}
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .ml-10 {
@@ -729,12 +738,16 @@ select {
   margin-bottom: 2.5rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
+.mr-3 {
+  margin-right: 0.75rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .flex {
@@ -849,6 +862,10 @@ select {
   border-radius: 9999px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -933,6 +950,10 @@ select {
   padding: 2.5rem;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -966,10 +987,6 @@ select {
 .py-20 {
   padding-top: 5rem;
   padding-bottom: 5rem;
-}
-
-.text-center {
-  text-align: center;
 }
 
 .text-justify {
