melhorias na exibição do componente Card

--- a/app/styles/tailwind_base.css
+++ b/app/styles/tailwind_base.css
@@ -12,15 +12,19 @@ body {
 }
 
 .card {
-  @apply flex-shrink-0 w-60 h-auto max-w-full relative rounded-md shadow-slate-700 shadow-lg transition-all duration-200 delay-100 ease-in-out hover:shadow-cyan-500 focus-visible:outline-none focus:shadow-cyan-500;
+  @apply flex-shrink-0 bg-cover max-w-full relative rounded-md shadow-slate-700 shadow-lg transition-all duration-200 delay-100 ease-in-out hover:shadow-cyan-500 focus-visible:outline-none focus:shadow-cyan-500;
+  width: 224px;
+  height: 336px;
 }
 
 .card.card-small {
-  @apply w-44;
+  width: 185px;
+  height: 278px;
 }
 
 .card.card-large {
-  @apply w-80;
+  width: 296px;
+  height: 444px;
 }
 
 .card > .card-background {
@@ -53,7 +57,7 @@ body {
 }
 
 .btn-primary {
-  @apply text-zinc-300 hover:text-zinc-100 bg-cyan-700 hover:bg-cyan-500 hover:shadow-cyan-700;
+  @apply text-zinc-50 bg-cyan-700 hover:bg-cyan-500 hover:shadow-cyan-700;
 }
 
 .btn-small {
