--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -1202,6 +1202,7 @@ select {
 
 body {
   font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
 .card-container {
@@ -1315,6 +1316,7 @@ body {
   top: 0.25rem;
   right: 0.25rem;
   width: 50px;
+  height: 50px;
 }
 
 .card > .card__image__bg {
