--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -709,8 +709,8 @@ select {
   bottom: 0px;
 }
 
-.top-10 {
-  top: 2.5rem;
+.top-6 {
+  top: 1.5rem;
 }
 
 .right-4 {
@@ -750,6 +750,10 @@ select {
   margin-right: 2.5rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -768,14 +772,6 @@ select {
 
 .mt-3 {
   margin-top: 0.75rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.ml-14 {
-  margin-left: 3.5rem;
 }
 
 .mb-4 {
@@ -806,6 +802,10 @@ select {
   height: 100vh;
 }
 
+.h-8 {
+  height: 2rem;
+}
+
 .h-auto {
   height: auto;
 }
@@ -834,6 +834,10 @@ select {
   width: 100vw;
 }
 
+.w-8 {
+  width: 2rem;
+}
+
 .w-64 {
   width: 16rem;
 }
@@ -848,6 +852,10 @@ select {
 
 .w-72 {
   width: 18rem;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
 }
 
 .flex-grow {
@@ -896,6 +904,10 @@ select {
   gap: 1.5rem;
 }
 
+.gap-3 {
+  gap: 0.75rem;
+}
+
 .gap-10 {
   gap: 2.5rem;
 }
@@ -931,6 +943,11 @@ select {
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-r-none {
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
 }
 
 .rounded-l-md {
@@ -1050,6 +1067,11 @@ select {
   padding-bottom: 0.25rem;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1065,12 +1087,21 @@ select {
   padding-bottom: 5rem;
 }
 
+.pt-7 {
+  padding-top: 1.75rem;
+}
+
 .text-justify {
   text-align: justify;
 }
 
 .text-lg {
   font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
@@ -1082,11 +1113,6 @@ select {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .text-4xl {
@@ -1110,6 +1136,11 @@ select {
 .text-slate-200 {
   --tw-text-opacity: 1;
   color: rgb(226 232 240 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-red-500 {
@@ -1143,6 +1174,10 @@ select {
 
 .opacity-90 {
   opacity: 0.9;
+}
+
+.opacity-80 {
+  opacity: 0.8;
 }
 
 .outline-none {
@@ -1190,6 +1225,10 @@ select {
 
 .delay-75 {
   transition-delay: 75ms;
+}
+
+.delay-1000 {
+  transition-delay: 1000ms;
 }
 
 .duration-200 {
@@ -1379,6 +1418,78 @@ body {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+form:not(#form-search) {
+  display: flex;
+  flex-direction: column;
+}
+
+form:not(#form-search) > div {
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+form:not(#form-search) label {
+  --tw-text-opacity: 1;
+  color: rgb(226 232 240 / var(--tw-text-opacity));
+}
+
+form:not(#form-search) [role="alert"] {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+form:not(#form-search) > button[type="submit"] {
+  margin-top: 1rem;
+  width: 20rem;
+  align-self: center;
+  border-radius: 0.375rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 116 144 / var(--tw-bg-opacity));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(226 232 240 / var(--tw-text-opacity));
+}
+
+form:not(#form-search) > button[type="submit"]:hover, form:not(#form-search) > button[type="submit"]:focus {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+form:not(#form-search) > button[type="submit"]:hover:hover, form:not(#form-search) > button[type="submit"]:focus:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(8 145 178 / var(--tw-bg-opacity));
+}
+
+form:not(#form-search) [type="text"], form:not(#form-search) [type="email"], form:not(#form-search) [type="url"], form:not(#form-search) [type="password"], form:not(#form-search) [type="number"], form:not(#form-search) [type="date"], form:not(#form-search) [type="datetime-local"], form:not(#form-search) [type="month"], form:not(#form-search) [type="search"], form:not(#form-search) [type="tel"], form:not(#form-search) [type="time"], form:not(#form-search) [type="week"], form:not(#form-search) [multiple], form:not(#form-search) textarea, form:not(#form-search) select {
+  border-radius: 0.375rem;
+}
+
+form:not(#form-search) [type="text"]:focus, form:not(#form-search) [type="email"]:focus, form:not(#form-search) [type="url"]:focus, form:not(#form-search) [type="password"]:focus, form:not(#form-search) [type="number"]:focus, form:not(#form-search) [type="date"]:focus, form:not(#form-search) [type="datetime-local"]:focus, form:not(#form-search) [type="month"]:focus, form:not(#form-search) [type="search"]:focus, form:not(#form-search) [type="tel"]:focus, form:not(#form-search) [type="time"]:focus, form:not(#form-search) [type="week"]:focus, form:not(#form-search) [multiple]:focus, form:not(#form-search) textarea:focus, form:not(#form-search) select:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(34 211 238 / var(--tw-ring-opacity));
+}
+
+form [aria-describedby^="errors"] {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
+}
+
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
@@ -1401,6 +1512,11 @@ body {
   background-color: rgb(6 182 212 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-cyan-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(8 145 178 / var(--tw-bg-opacity));
+}
+
 .hover\:text-slate-100:hover {
   --tw-text-opacity: 1;
   color: rgb(241 245 249 / var(--tw-text-opacity));
@@ -1413,6 +1529,10 @@ body {
 
 .hover\:opacity-100:hover {
   opacity: 1;
+}
+
+.hover\:opacity-90:hover {
+  opacity: 0.9;
 }
 
 .focus\:scale-105:focus {
@@ -1493,14 +1613,26 @@ body {
 }
 
 @media (min-width: 1024px) {
+  .lg\:relative {
+    position: relative;
+  }
+
+  .lg\:top-0 {
+    top: 0px;
+  }
+
+  .lg\:right-auto {
+    right: auto;
+  }
+
   .lg\:my-0 {
     margin-top: 0px;
     margin-bottom: 0px;
   }
 
-  .lg\:mx-14 {
-    margin-left: 3.5rem;
-    margin-right: 3.5rem;
+  .lg\:mx-10 {
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
   }
 
   .lg\:flex-row {
