--- a/app/styles/tailwind_base.css
+++ b/app/styles/tailwind_base.css
@@ -95,8 +95,12 @@ form:not(#form-search) > button[type="submit"] {
   @apply w-80 self-center py-2 rounded-md bg-cyan-700 text-slate-200 text-xl mt-4;
 }
 
-form:not(#form-search) > button[type="submit"]:hover,
-form:not(#form-search) > button[type="submit"]:focus {
+form:not(#form-search) > button[type="submit"][disabled] {
+  @apply bg-slate-600 pointer-events-none;
+}
+
+form:not(#form-search) > button[type="submit"]:not(disabled):hover,
+form:not(#form-search) > button[type="submit"]:not(disabled):focus {
   @apply hover:bg-cyan-600 text-white transition-all;
 }
 
