--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -734,6 +734,11 @@ select {
   margin-right: 1px;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .mx-0 {
   margin-left: 0px;
   margin-right: 0px;
@@ -742,11 +747,6 @@ select {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .mx-2 {
@@ -782,6 +782,10 @@ select {
 
 .mb-5 {
   margin-bottom: 1.25rem;
+}
+
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
 .mt-8 {
@@ -896,8 +900,8 @@ select {
   width: 18rem;
 }
 
-.flex-1 {
-  flex: 1 1 0%;
+.max-w-xl {
+  max-width: 36rem;
 }
 
 .flex-grow {
@@ -1002,6 +1006,10 @@ select {
 
 .self-start {
   align-self: flex-start;
+}
+
+.self-center {
+  align-self: center;
 }
 
 .overflow-hidden {
@@ -1122,6 +1130,11 @@ select {
   padding-bottom: 0.5rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1132,16 +1145,16 @@ select {
   padding-bottom: 5rem;
 }
 
-.pt-7 {
-  padding-top: 1.75rem;
-}
-
 .pl-4 {
   padding-left: 1rem;
 }
 
 .pr-10 {
   padding-right: 2.5rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .text-justify {
@@ -1548,17 +1561,26 @@ form:not(#form-search) [role="alert"] {
 
 form:not(#form-search) > button[type="submit"] {
   margin-top: 1rem;
-  width: 20rem;
+  width: 8rem;
+  max-width: 20rem;
   align-self: center;
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
   background-color: rgb(14 116 144 / var(--tw-bg-opacity));
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   font-size: 1.25rem;
   line-height: 1.75rem;
   --tw-text-opacity: 1;
   color: rgb(226 232 240 / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px) {
+  form:not(#form-search) > button[type="submit"] {
+    width: 20rem;
+  }
 }
 
 form:not(#form-search) > button[type="submit"][disabled] {
