--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -709,14 +709,6 @@ select {
   bottom: 0px;
 }
 
-.top-6 {
-  top: 1.5rem;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
 .right-0 {
   right: 0px;
 }
@@ -729,6 +721,10 @@ select {
   z-index: 10;
 }
 
+.m-auto {
+  margin: auto;
+}
+
 .mx-px {
   margin-left: 1px;
   margin-right: 1px;
@@ -737,16 +733,6 @@ select {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.mx-0 {
-  margin-left: 0px;
-  margin-right: 0px;
-}
-
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
 }
 
 .mx-2 {
@@ -796,6 +782,10 @@ select {
   margin-bottom: 1rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -810,6 +800,14 @@ select {
 
 .mb-16 {
   margin-bottom: 4rem;
+}
+
+.mt-9 {
+  margin-top: 2.25rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .flex {
@@ -900,8 +898,16 @@ select {
   width: 18rem;
 }
 
+.min-w-\[320px\] {
+  min-width: 320px;
+}
+
 .max-w-xl {
   max-width: 36rem;
+}
+
+.max-w-\[768px\] {
+  max-width: 768px;
 }
 
 .flex-grow {
@@ -983,16 +989,16 @@ select {
   gap: 1px;
 }
 
-.gap-6 {
-  gap: 1.5rem;
-}
-
-.gap-3 {
-  gap: 0.75rem;
+.gap-8 {
+  gap: 2rem;
 }
 
 .gap-10 {
   gap: 2.5rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .gap-y-10 {
@@ -1004,8 +1010,8 @@ select {
        column-gap: 1.5rem;
 }
 
-.self-start {
-  align-self: flex-start;
+.self-center {
+  align-self: center;
 }
 
 .overflow-hidden {
@@ -1028,8 +1034,8 @@ select {
   border-radius: 9999px;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
+.rounded-3xl {
+  border-radius: 1.5rem;
 }
 
 .border-0 {
@@ -1101,9 +1107,9 @@ select {
   padding: 2.5rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 .py-5 {
@@ -1126,9 +1132,19 @@ select {
   padding-bottom: 0.5rem;
 }
 
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-6 {
@@ -1147,6 +1163,22 @@ select {
 
 .pr-10 {
   padding-right: 2.5rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
+.pb-20 {
+  padding-bottom: 5rem;
 }
 
 .text-center {
@@ -1180,6 +1212,15 @@ select {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .font-semibold {
@@ -1239,8 +1280,8 @@ select {
   opacity: 0;
 }
 
-.opacity-90 {
-  opacity: 0.9;
+.opacity-60 {
+  opacity: 0.6;
 }
 
 .opacity-80 {
@@ -1618,6 +1659,14 @@ form [aria-describedby^="errors"] {
   --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
 }
 
+.icon-github {
+  -webkit-mask: url("/images/github-mark-white.svg") no-repeat center;
+  mask: url("/images/github-mark-white.svg") no-repeat center;
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+}
+
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
@@ -1650,10 +1699,6 @@ form [aria-describedby^="errors"] {
   color: rgb(6 182 212 / var(--tw-text-opacity));
 }
 
-.hover\:opacity-100:hover {
-  opacity: 1;
-}
-
 .hover\:opacity-90:hover {
   opacity: 0.9;
 }
@@ -1672,6 +1717,10 @@ form [aria-describedby^="errors"] {
 .focus\:text-cyan-500:focus {
   --tw-text-opacity: 1;
   color: rgb(6 182 212 / var(--tw-text-opacity));
+}
+
+.focus\:opacity-90:focus {
+  opacity: 0.9;
 }
 
 .focus\:outline-none:focus {
@@ -1718,6 +1767,10 @@ form [aria-describedby^="errors"] {
   .sm\:flex-row {
     flex-direction: row;
   }
+
+  .sm\:justify-between {
+    justify-content: space-between;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1740,36 +1793,15 @@ form [aria-describedby^="errors"] {
   .md\:flex-row {
     flex-direction: row;
   }
+
+  .md\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:relative {
-    position: relative;
-  }
-
-  .lg\:top-0 {
-    top: 0px;
-  }
-
-  .lg\:right-auto {
-    right: auto;
-  }
-
-  .lg\:my-0 {
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
-
-  .lg\:mx-10 {
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
-  }
-
   .lg\:mb-0 {
     margin-bottom: 0px;
-  }
-
-  .lg\:flex-row {
-    flex-direction: row;
   }
 }
